Fix alignement autocomplete + bouton sur ipad

--- a/src/components/pnc-search-filter/pnc-search-filter.scss
+++ b/src/components/pnc-search-filter/pnc-search-filter.scss
@@ -43,7 +43,7 @@ pnc-search-filter {
             width: 100%;
         }
         .button-md{
-            margin-top: $margin-top-autocomplete + $border-input-size;
+            margin-top: $margin-top-autocomplete ;
 
         }
         .button-ios {
